--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: holymoly_left
+    shield: 5x5pad_left
   - board: nice_nano_v2
-    shield: holymoly_right
+    shield: 5x5pad_right
